@@ -17,6 +17,7 @@
      clear select masks if we return before calling select().
  - (djm) "make veryclean" fix from Tom Holroyd <tomh@po.crl.go.jp>
  - (djm) Clean some autoconf-2.52 junk when doing "make distclean"
+ - (djm) Cleanup sshpty.c a little
 
 20011010
  - (djm) OpenBSD CVS Sync
@@ -6715,4 +6716,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1605 2001/10/12 09:15:27 djm Exp $
+$Id: ChangeLog,v 1.1606 2001/10/12 09:15:48 djm Exp $
